build/log/idf_py_stderr_output_19726
Command: make -j 18 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src' belongs
  to component esp_wifi but is being used by component wpa_supplicant.  It is
  recommended to define the component dependency for wpa_supplicant on the
  component esp_wifi, i.e.  'idf_component_register(...  PRIV_REQUIRES
  esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/src' belongs to component
  wpa_supplicant but is being used by component esp_wifi.  It is recommended
  to define the component dependency for esp_wifi on the component
  wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/esp_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


In file included from /mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.c:1:
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.h:6:64: error: unknown type name 'wifi_auth_mode_t'
    6 | void wifi_manager_init(const char *ssid, const char *password, wifi_auth_mode_t authmode);
      |                                                                ^~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/mqtt_manager.c: In function 'mqtt_event_handler':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/mqtt_manager.c:12:9: warning: unused variable 'msg_id' [-Wunused-variable]
   12 |     int msg_id;
      |         ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/mqtt_manager.c:11:30: warning: unused variable 'client' [-Wunused-variable]
   11 |     esp_mqtt_client_handle_t client = event->client;
      |                              ^~~~~~
In file included from /mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:11:
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.h:6:64: error: unknown type name 'wifi_auth_mode_t'
    6 | void wifi_manager_init(const char *ssid, const char *password, wifi_auth_mode_t authmode);
      |                                                                ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:105: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj] Erro 1
make[2]: ** Esperando que outros processos terminem.
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c: In function 'app_main':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:51:5: error: implicit declaration of function 'wifi_manager_init' [-Wimplicit-function-declaration]
   51 |     wifi_manager_init(WIFI_SSID, WIFI_PASS, WIFI_AUTH_OPEN);
      |     ^~~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:51:45: error: 'WIFI_AUTH_OPEN' undeclared (first use in this function)
   51 |     wifi_manager_init(WIFI_SSID, WIFI_PASS, WIFI_AUTH_OPEN);
      |                                             ^~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:51:45: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:91: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5944: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make[1]: ** Esperando que outros processos terminem.
make: *** [Makefile:136: all] Erro 2
